[tool.poetry]
name = "langchain-tutorial"
version = "0.0.1"
description = "my langchain tutorial"
authors = ["nkowne63rt <neutron63zf@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.106"
openai = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
